pipeline running with recursive audio file search

--- a/Pre-Processing/Audio_to_Image.ipynb
+++ b/Pre-Processing/Audio_to_Image.ipynb
@@ -41,14 +41,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"../Songs/bob_marley--redemption_song.mp3\"\n",
-    "y, sr = librosa.load(filename, sr=None)"
+    "## filename = \"../Songs/dev/bob_marley--redemption_song.mp3\"\n",
+    "filename = \"../Songs/gtzan/disco/disco.00004.wav\"\n",
+    "y, sr = librosa.load(filename, sr=44100, mono=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -98,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -106,14 +131,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "12",
    "metadata": {},
    "source": [
     "# Make Beat-aligned Spectrograms"
@@ -122,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "14",
    "metadata": {},
    "source": [
     "### Test Spectrogram Output"
@@ -205,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "16",
    "metadata": {},
    "source": [
     "### Download Image Chunks"
@@ -230,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,36 +272,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
     "# downloadImagesArray(imgs, \"spectrogram\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -295,8 +296,32 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24",
    "metadata": {},
    "source": [
     "# Make Beat-aligned Chromagrams"
@@ -305,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "26",
    "metadata": {},
    "source": [
     "### Test Raw Chromagram Output (small on purpose)"
@@ -386,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "28",
    "metadata": {},
    "source": [
     "### Visualize Chromagram"
@@ -411,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,30 +479,6 @@
     "# Visualize the first chromagram\n",
     "plot_chromagram_image(imgs[0], cmap=\"inferno\", y_pixels=12)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -624,8 +625,32 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51",
    "metadata": {},
    "source": [
     "# Make Beat-Unaligned Spectrogram"
@@ -634,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,11 +733,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = spectros[30]\n",
+    "arr = spectros[0]\n",
     "\n",
     "# If the array is float (e.g. values in [0,1] or arbitrary floats), scale to 0-255\n",
     "if np.issubdtype(arr.dtype, np.floating):\n",
@@ -724,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51",
+   "id": "54",
    "metadata": {},
    "source": [
     "# Make Beat-Unaligned Chromagram"
@@ -733,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,36 +828,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_chromagram_image(chromas[3], cmap=\"inferno\", y_pixels=12)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -851,8 +852,32 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62",
    "metadata": {},
    "source": [
     "# Make Key-Aligned Chromagram"
@@ -861,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -936,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -944,14 +969,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "64",
+   "id": "67",
    "metadata": {},
    "source": [
     "# Run Full Pipeline"
@@ -960,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,30 +1023,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "69",
    "metadata": {},
    "outputs": [],
@@ -1055,6 +1056,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": []
