--- a/Pre-Processing/Downbeat_Detection.ipynb
+++ b/Pre-Processing/Downbeat_Detection.ipynb
@@ -48,8 +48,8 @@
    "source": [
     "# Load audio\n",
     "## filename = \"../Songs/bob_marley--redemption_song.mp3\"\n",
-    "filename = \"../Songs/tool--ticks_and_leaches.mp3\"\n",
-    "y, sr = librosa.load(filename, sr=None)\n",
+    "filename = \"../Songs/dev/tool--ticks_and_leaches.mp3\"\n",
+    "y, sr = librosa.load(filename, sr=44100, mono=True)\n",
     "\n",
     "# -------------------------------\n",
     "# Beat + Downbeat tracking\n",
@@ -59,7 +59,7 @@
     "proc = madmom.features.downbeats.RNNDownBeatProcessor()(filename)\n",
     "\n",
     "# Decode with a DBN to get sequences of [beat, downbeat]\n",
-    "beats = madmom.features.downbeats.DBNDownBeatTrackingProcessor(beats_per_bar=[3, 4],\n",
+    "beats = madmom.features.downbeats.DBNDownBeatTrackingProcessor(beats_per_bar=[3, 4, 5, 7, 11],\n",
     "                                                               fps=100)(proc)\n",
     "\n",
     "# beats is an array of shape (N, 2):\n",
