--- a/Pre-Processing/Key_Detection.ipynb
+++ b/Pre-Processing/Key_Detection.ipynb
@@ -39,10 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## filename = \"../Songs/bob_marley--redemption_song.mp3\"\n",
-    "filename = \"../Songs/rufus_du_sol--innerbloom.mp3\"\n",
-    "## filename = \"../Songs/tool--ticks_and_leaches.mp3\"\n",
-    "y, sr = librosa.load(filename, sr=None)\n",
+    "filename = \"../Songs/dev/rufus_du_sol--innerbloom.mp3\"\n",
+    "y, sr = librosa.load(filename, sr=44100, mono=True)\n",
     "\n",
     "# create processor (uses ensemble of CNNs by default)\n",
     "proc = CNNKeyRecognitionProcessor()\n",
@@ -61,7 +59,9 @@
    "id": "4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sr"
+   ]
   },
   {
    "cell_type": "markdown",
