pca directly on images for eigensound embeddings

--- a/Embeddings/CNN_Models.ipynb
+++ b/Embeddings/CNN_Models.ipynb
@@ -350,7 +350,26 @@
    "id": "14",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "# Path to save\n",
+    "output_path = \"../Results/EmbeddingData/embeddings.pt\"\n",
+    "\n",
+    "# Make sure the directory exists\n",
+    "os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
+    "\n",
+    "# Save the dictionary\n",
+    "torch.save(embeddings, output_path)\n",
+    "\n",
+    "print(f\"Embeddings saved to {output_path}\")\n",
+    "\n",
+    "# --- Later on, to load them back ---\n",
+    "loaded_embeddings = torch.load(output_path, weights_only=True)\n",
+    "\n",
+    "for model_name, tensor in loaded_embeddings.items():\n",
+    "    print(f\"{model_name:<20} | {tensor.shape}\")\n"
+   ]
   },
   {
    "cell_type": "code",
