save eigensounds as torch tensors

--- a/Pre-Processing/Audio_to_Image.ipynb
+++ b/Pre-Processing/Audio_to_Image.ipynb
@@ -41,8 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## filename = \"../Songs/dev/bob_marley--redemption_song.mp3\"\n",
-    "filename = \"../Songs/gtzan/disco/disco.00004.wav\"\n",
+    "filename = \"../Songs/dev/tool--ticks_and_leaches.mp3\"\n",
+    "## filename = \"../Songs/gtzan/disco/disco.00004.wav\"\n",
     "y, sr = librosa.load(filename, sr=44100, mono=True)"
    ]
   },
@@ -234,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = imgs[2]\n",
+    "arr = imgs[30]\n",
     "\n",
     "# If the array is float (e.g. values in [0,1] or arbitrary floats), scale to 0-255\n",
     "if np.issubdtype(arr.dtype, np.floating):\n",
@@ -989,7 +989,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"../Songs/bob_marley--redemption_song.mp3\"\n",
+    "filename = \"../Songs/dev/bob_marley--redemption_song.mp3\"\n",
     "y, sr = librosa.load(filename, sr=None)\n",
     "\n",
     "\n",
