--- a/Embeddings/CNN_Models.ipynb
+++ b/Embeddings/CNN_Models.ipynb
@@ -238,14 +238,6 @@
    "id": "11",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import torch\n",
     "from torchvision import transforms\n",
@@ -339,6 +331,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "13",
    "metadata": {},
    "outputs": [],
@@ -351,24 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "# Path to save\n",
-    "output_path = \"../Results/EmbeddingData/embeddings.pt\"\n",
-    "\n",
-    "# Make sure the directory exists\n",
-    "os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
-    "\n",
-    "# Save the dictionary\n",
-    "torch.save(embeddings, output_path)\n",
-    "\n",
-    "print(f\"Embeddings saved to {output_path}\")\n",
-    "\n",
-    "# --- Later on, to load them back ---\n",
-    "loaded_embeddings = torch.load(output_path, weights_only=True)\n",
-    "\n",
-    "for model_name, tensor in loaded_embeddings.items():\n",
-    "    print(f\"{model_name:<20} | {tensor.shape}\")\n"
+    "embeddings['resnet34'].shape"
    ]
   },
   {
@@ -377,7 +360,9 @@
    "id": "15",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "type(embeddings['resnet34'])"
+   ]
   },
   {
    "cell_type": "code",
@@ -415,6 +400,89 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Path to save\n",
+    "output_path = \"../Results/EmbeddingData/embeddings.pt\"\n",
+    "\n",
+    "# Make sure the directory exists\n",
+    "os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
+    "\n",
+    "# Save the dictionary\n",
+    "torch.save(embeddings, output_path)\n",
+    "\n",
+    "print(f\"Embeddings saved to {output_path}\")\n",
+    "\n",
+    "# --- Later on, to load them back ---\n",
+    "loaded_embeddings = torch.load(output_path, weights_only=True)\n",
+    "\n",
+    "for model_name, tensor in loaded_embeddings.items():\n",
+    "    print(f\"{model_name:<20} | {tensor.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": []
