--- a/Embeddings/Eigen_Sounds.ipynb
+++ b/Embeddings/Eigen_Sounds.ipynb
@@ -233,6 +233,129 @@
    "id": "16",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "def get_aligned_spectrograms(prefix):\n",
+    "    \"\"\"\n",
+    "    Given a prefix like '../Results/Dev/rock.00069/aligned_spectrogram',\n",
+    "    return all matching files of the form aligned_spectrogram_<n>.png,\n",
+    "    sorted numerically by <n>.\n",
+    "    \"\"\"\n",
+    "    pattern = f\"{prefix}_*.png\"\n",
+    "    files = glob.glob(pattern)\n",
+    "    files.sort(key=lambda x: int(os.path.splitext(x)[0].split('_')[-1]))\n",
+    "    return files\n",
+    "\n",
+    "\n",
+    "# Example usage:\n",
+    "prefix = \"../Results/Dev/rock.00069/aligned_spectrogram\"\n",
+    "filenames = get_aligned_spectrograms(prefix)\n",
+    "\n",
+    "print(filenames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pixel_pca_inference_matrix.py\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from PIL import Image\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "def load_pca(npz_path):\n",
+    "    \"\"\"Reload trained PCA from .npz file.\"\"\"\n",
+    "    data = np.load(npz_path)\n",
+    "    components = data[\"components\"]      # (n_components, D)\n",
+    "    mean = data[\"mean\"]                  # (D,)\n",
+    "    n_components = int(data[\"n_components\"])\n",
+    "    return components, mean, n_components\n",
+    "\n",
+    "def project_images_matrix(filenames, pca_npz_path, save_path=\"pixel_embeddings.pt\", img_size=(128,128)):\n",
+    "    H, W = img_size\n",
+    "\n",
+    "    # Load PCA weights\n",
+    "    components, mean, n_components = load_pca(pca_npz_path)\n",
+    "\n",
+    "    all_embeds = []\n",
+    "\n",
+    "    for fn in tqdm(filenames, desc=\"Projecting images\"):\n",
+    "        # Load + preprocess image\n",
+    "        img = Image.open(fn).convert(\"L\").resize((W, H), Image.BILINEAR)\n",
+    "        arr = np.asarray(img, dtype=np.float32).reshape(-1) / 255.0\n",
+    "\n",
+    "        # Center and project\n",
+    "        arr_centered = arr - mean\n",
+    "        embed = np.dot(components, arr_centered)   # shape (n_components,)\n",
+    "\n",
+    "        all_embeds.append(embed)\n",
+    "\n",
+    "    # Stack into (N, n_components)\n",
+    "    embeddings_tensor = torch.tensor(np.stack(all_embeds), dtype=torch.float32)\n",
+    "\n",
+    "    # Save tensor\n",
+    "    torch.save(embeddings_tensor, save_path)\n",
+    "    print(f\"Saved embeddings to {save_path}, shape={embeddings_tensor.shape}\")\n",
+    "\n",
+    "    return embeddings_tensor\n",
+    "\n",
+    "\n",
+    "\n",
+    "embeddings = project_images_matrix(\n",
+    "    filenames,\n",
+    "    pca_npz_path=\"../Results/EmbeddingData/pixel_pca.npz\",\n",
+    "    img_size=(128,128)\n",
+    ")\n",
+    "print(embeddings.shape)  # e.g. torch.Size([27, 512])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
