added linear and convolutional auto encoders

--- a/Embeddings/CNN_Models.ipynb
+++ b/Embeddings/CNN_Models.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0",
+   "metadata": {},
+   "source": [
+    "# Load CNN Models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,138 +51,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "3",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch\n",
-    "from torchvision import transforms\n",
-    "from torch import nn\n",
-    "from PIL import Image\n",
-    "\n",
-    "# Assuming models are already loaded and frozen:\n",
-    "# resnet34, inception, squeezenet, efficientnetv2s, mobilenetv3s\n",
-    "\n",
-    "# Preprocessing transforms\n",
-    "preprocess_224 = transforms.Compose([\n",
-    "    transforms.Resize(256),\n",
-    "    transforms.CenterCrop(224),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-    "                         std=[0.229, 0.224, 0.225])\n",
-    "])\n",
-    "\n",
-    "preprocess_299 = transforms.Compose([\n",
-    "    transforms.Resize(320),\n",
-    "    transforms.CenterCrop(299),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-    "                         std=[0.229, 0.224, 0.225])\n",
-    "])\n",
-    "\n",
-    "def get_embeddings(image_path, device='cpu'):\n",
-    "    \"\"\"\n",
-    "    Run an image through all five frozen models and return embeddings.\n",
-    "    Returns a dictionary of tensors keyed by model name.\n",
-    "    \"\"\"\n",
-    "    # Load image\n",
-    "    img = Image.open(image_path).convert('RGB')\n",
-    "    \n",
-    "    embeddings = {}\n",
-    "    \n",
-    "    # Set all models to eval mode and freeze parameters\n",
-    "    resnet34.eval()\n",
-    "    inception.eval()\n",
-    "    squeezenet.eval()\n",
-    "    efficientnetv2s.eval()\n",
-    "    mobilenetv3s.eval()\n",
-    "    \n",
-    "    with torch.no_grad():\n",
-    "        # ResNet-34 - Remove final FC layer\n",
-    "        x = preprocess_224(img).unsqueeze(0).to(device)\n",
-    "        resnet34_feat = torch.flatten(torch.nn.Sequential(*list(resnet34.children())[:-1])(x), 1)\n",
-    "        embeddings['resnet34'] = resnet34_feat\n",
-    "        \n",
-    "        # InceptionV3 - Use forward pass and extract features before final FC\n",
-    "        x = preprocess_299(img).unsqueeze(0).to(device)\n",
-    "        \n",
-    "        ## Replace the fc layer temporarily\n",
-    "        original_fc = inception.fc\n",
-    "        inception.fc = nn.Identity()\n",
-    "        inception_feat = inception(x)\n",
-    "        inception.fc = original_fc  # Restore original\n",
-    "        embeddings['inceptionv3'] = inception_feat\n",
-    "    \n",
-    "        \n",
-    "        # SqueezeNet 1.1 - Use features + global average pooling\n",
-    "        x = preprocess_224(img).unsqueeze(0).to(device)\n",
-    "        squeezenet_raw = squeezenet.features(x)  # [1, 512, H, W]\n",
-    "        squeezenet_pooled = torch.nn.functional.adaptive_avg_pool2d(squeezenet_raw, (1, 1))  # [1, 512, 1, 1]\n",
-    "        squeezenet_feat = torch.flatten(squeezenet_pooled, 1)  # [1, 512]\n",
-    "        embeddings['squeezenet'] = squeezenet_feat\n",
-    "        \n",
-    "        # EfficientNetV2-S - Use forward_features + global average pooling\n",
-    "        x = preprocess_224(img).unsqueeze(0).to(device)\n",
-    "        effnet_raw = efficientnetv2s.forward_features(x)  # [1, channels, H, W]\n",
-    "        effnet_pooled = torch.nn.functional.adaptive_avg_pool2d(effnet_raw, (1, 1))  # [1, channels, 1, 1]\n",
-    "        effnet_feat = torch.flatten(effnet_pooled, 1)  # [1, channels]\n",
-    "        embeddings['efficientnetv2s'] = effnet_feat\n",
-    "        \n",
-    "        # MobileNetV3-Small - Use features + global average pooling\n",
-    "        x = preprocess_224(img).unsqueeze(0).to(device)\n",
-    "        mobilenet_raw = mobilenetv3s.features(x)  # [1, channels, H, W]\n",
-    "        mobilenet_pooled = torch.nn.functional.adaptive_avg_pool2d(mobilenet_raw, (1, 1))  # [1, channels, 1, 1]\n",
-    "        mobilenet_feat = torch.flatten(mobilenet_pooled, 1)  # [1, channels]\n",
-    "        embeddings['mobilenetv3_small'] = mobilenet_feat\n",
-    "    \n",
-    "    return embeddings\n",
-    "\n",
-    "# Test the function\n",
-    "filename = \"../Results/Dev/rock.00069/aligned_spectrogram_21.png\"\n",
-    "embeddings = get_embeddings(filename, device='cpu')\n",
-    "\n",
-    "print(f\"{'Model Name':<20} | {'Embedding Shape'}\")\n",
-    "print(\"-\" * 30)\n",
-    "for model_name, embedding in embeddings.items():\n",
-    "    print(f\"{model_name:<20} | {embedding.shape}\")"
+    "# Get Filenames for One Batch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,39 +96,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6",
+   "metadata": {},
+   "source": [
+    "# Get Embeddings For Batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,33 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embeddings['resnet34'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,60 +218,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
+   "cell_type": "markdown",
+   "id": "10",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Save Embeddings"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# Path to save\n",
     "output_path = \"../Results/EmbeddingData/embeddings.pt\"\n",
     "\n",
@@ -442,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -450,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -458,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -466,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -474,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -482,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": []
