--- a/Embeddings/Eigen_Sounds.ipynb
+++ b/Embeddings/Eigen_Sounds.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# List All Files For PCA Fitting"
+   ]
   },
   {
    "cell_type": "code",
@@ -54,65 +54,17 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Incremental PCA Training"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,31 +128,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
+   "cell_type": "markdown",
+   "id": "6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Visualize EigenSounds"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,15 +166,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
+   "source": [
+    "# Test Batch Process Using Loaded PCA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,10 +252,6 @@
     "    # Stack into (N, n_components)\n",
     "    embeddings_tensor = torch.tensor(np.stack(all_embeds), dtype=torch.float32)\n",
     "\n",
-    "    # Save tensor\n",
-    "    torch.save(embeddings_tensor, save_path)\n",
-    "    print(f\"Saved embeddings to {save_path}, shape={embeddings_tensor.shape}\")\n",
-    "\n",
     "    return embeddings_tensor\n",
     "\n",
     "\n",
@@ -319,17 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(embeddings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -337,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -345,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -353,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": []
