--- a/Embeddings/Auto Encoder dep.ipynb
+++ b/Embeddings/Auto Encoder dep.ipynb
@@ -17,7 +17,7 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import torchvision.transforms as T\n",
-    "from tqdm.auto import tqdm"
+    "from tqdm.auto import tqdm\n"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "id": "2",
    "metadata": {},
    "source": [
-    "# Load Dataset"
+    "# Load Dataset "
    ]
   },
   {
@@ -49,7 +49,7 @@
     "filenames = sorted(glob.glob(pattern))\n",
     "\n",
     "print(f\"Found {len(filenames)} spectrogram images\")\n",
-    "print(f\"Example: {filenames[0]}\")"
+    "print(f\"Example: {filenames[0]}\")\n"
    ]
   },
   {
@@ -99,7 +99,7 @@
     "dataset = SpectrogramDataset(filenames, img_size=img_size)\n",
     "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
-    "print(\"Dataset ready:\", len(dataset), \"images\")"
+    "print(\"Dataset ready:\", len(dataset), \"images\")\n"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "id": "6",
    "metadata": {},
    "source": [
-    "# Simple Linear Autoencoder"
+    "# Define Linear Autoencoder"
    ]
   },
   {
@@ -125,7 +125,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class SimpleAutoencoder(nn.Module):\n",
     "    def __init__(self, embedding_dim=128):\n",
     "        super().__init__()\n",
@@ -156,7 +155,7 @@
     "criterion = nn.MSELoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
     "\n",
-    "print(\"Model ready on\", device)"
+    "print(\"Model ready on\", device)\n"
    ]
   },
   {
@@ -181,7 +180,7 @@
     "\n",
     "        epoch_loss += loss.item()\n",
     "\n",
-    "    print(f\"Epoch {epoch+1}/{epochs} - Loss: {epoch_loss/len(dataloader):.6f}\")"
+    "    print(f\"Epoch {epoch+1}/{epochs} - Loss: {epoch_loss/len(dataloader):.6f}\")\n"
    ]
   },
   {
@@ -208,7 +207,7 @@
     "save_path = \"../Results/EmbeddingData/autoencoder_embeddings.pt\"\n",
     "os.makedirs(os.path.dirname(save_path), exist_ok=True)\n",
     "torch.save(embeddings_tensor, save_path)\n",
-    "print(f\"Saved embeddings to {save_path}\")"
+    "print(f\"Saved embeddings to {save_path}\")\n"
    ]
   },
   {
@@ -220,17 +219,65 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "11",
    "metadata": {},
-   "source": [
-    "# Convolutional Autoencoder"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,13 +346,14 @@
     "\n",
     "model = ConvAutoencoder(latent_dim=128).to(device)\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,29 +376,53 @@
     "        running_loss += loss.item() * imgs.size(0)\n",
     "\n",
     "    epoch_loss = running_loss / len(dataset)\n",
-    "    print(f\"Epoch [{epoch+1}/{n_epochs}], Loss: {epoch_loss:.6f}\")"
+    "    print(f\"Epoch [{epoch+1}/{n_epochs}], Loss: {epoch_loss:.6f}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "15",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
    "metadata": {},
-   "source": [
-    "# Convolutional Variational Autoencoder"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,11 +497,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_epochs = 1\n",
+    "n_epochs = 10\n",
     "for epoch in range(n_epochs):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
@@ -451,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -459,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -467,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -475,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -483,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -491,15 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": []
