added train/test split to autoencoder fitting

--- a/Embeddings/Auto Encoder dep.ipynb
+++ b/Embeddings/Auto Encoder dep.ipynb
@@ -11,6 +11,8 @@
     "\n",
     "import os\n",
     "import glob\n",
+    "import random\n",
+    "from collections import defaultdict\n",
     "from PIL import Image\n",
     "\n",
     "import torch\n",
@@ -43,13 +45,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Collect only aligned_spectrogram images\n",
+    "# Parameters\n",
     "data_root = \"../Results/Dev\"\n",
     "pattern = os.path.join(data_root, \"*\", \"aligned_spectrogram_*.png\")\n",
-    "filenames = sorted(glob.glob(pattern))\n",
+    "test_split = 0.2     # 20% test, 80% train\n",
+    "seed = 42            # random seed for reproducibility\n",
     "\n",
+    "# Gather all spectrograms\n",
+    "filenames = sorted(glob.glob(pattern))\n",
     "print(f\"Found {len(filenames)} spectrogram images\")\n",
-    "print(f\"Example: {filenames[0]}\")\n"
+    "print(f\"Example: {filenames[0]}\")\n",
+    "\n",
+    "# Group by song folder\n",
+    "song_to_files = defaultdict(list)\n",
+    "for f in filenames:\n",
+    "    song = os.path.basename(os.path.dirname(f))  # parent folder name\n",
+    "    song_to_files[song].append(f)\n",
+    "\n",
+    "all_songs = sorted(song_to_files.keys())\n",
+    "print(f\"Found {len(all_songs)} songs\")\n",
+    "\n",
+    "# Reproducible shuffle\n",
+    "random.seed(seed)\n",
+    "random.shuffle(all_songs)\n",
+    "\n",
+    "# Split songs into train/test\n",
+    "num_test = int(len(all_songs) * test_split)\n",
+    "test_songs = set(all_songs[:num_test])\n",
+    "train_songs = set(all_songs[num_test:])\n",
+    "\n",
+    "# Flatten into filename lists\n",
+    "train_files = [f for song in train_songs for f in song_to_files[song]]\n",
+    "test_files  = [f for song in test_songs  for f in song_to_files[song]]\n",
+    "\n",
+    "print(f\"Train: {len(train_files)} files from {len(train_songs)} songs\")\n",
+    "print(f\"Test:  {len(test_files)} files from {len(test_songs)} songs\")\n"
    ]
   },
   {
@@ -165,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 1  # adjust as needed\n",
+    "epochs = 10  # adjust as needed\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    epoch_loss = 0\n",
