--- a/Embeddings/Auto Encoder.ipynb
+++ b/Embeddings/Auto Encoder.ipynb
@@ -11,6 +11,8 @@
     "\n",
     "import os\n",
     "import glob\n",
+    "import random\n",
+    "from collections import defaultdict\n",
     "from PIL import Image\n",
     "\n",
     "import torch\n",
@@ -43,13 +45,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Collect only aligned_spectrogram images\n",
+    "# Parameters\n",
     "data_root = \"../Results/Dev\"\n",
     "pattern = os.path.join(data_root, \"*\", \"aligned_spectrogram_*.png\")\n",
-    "filenames = sorted(glob.glob(pattern))\n",
+    "test_split = 0.2     # 20% test, 80% train\n",
+    "seed = 42            # random seed for reproducibility\n",
     "\n",
+    "# Gather all spectrograms\n",
+    "filenames = sorted(glob.glob(pattern))\n",
     "print(f\"Found {len(filenames)} spectrogram images\")\n",
-    "print(f\"Example: {filenames[0]}\")"
+    "print(f\"Example: {filenames[0]}\")\n",
+    "\n",
+    "# Group by song folder\n",
+    "song_to_files = defaultdict(list)\n",
+    "for f in filenames:\n",
+    "    song = os.path.basename(os.path.dirname(f))  # parent folder name\n",
+    "    song_to_files[song].append(f)\n",
+    "\n",
+    "all_songs = sorted(song_to_files.keys())\n",
+    "print(f\"Found {len(all_songs)} songs\")\n",
+    "\n",
+    "# Reproducible shuffle\n",
+    "random.seed(seed)\n",
+    "random.shuffle(all_songs)\n",
+    "\n",
+    "# Split songs into train/test\n",
+    "num_test = int(len(all_songs) * test_split)\n",
+    "test_songs = set(all_songs[:num_test])\n",
+    "train_songs = set(all_songs[num_test:])\n",
+    "\n",
+    "# Flatten into filename lists\n",
+    "train_files = [f for song in train_songs for f in song_to_files[song]]\n",
+    "test_files  = [f for song in test_songs  for f in song_to_files[song]]\n",
+    "\n",
+    "print(f\"Train: {len(train_files)} files from {len(train_songs)} songs\")\n",
+    "print(f\"Test:  {len(test_files)} files from {len(test_songs)} songs\")\n"
    ]
   },
   {
@@ -96,10 +126,22 @@
     "img_size = 128\n",
     "batch_size = 32\n",
     "\n",
-    "dataset = SpectrogramDataset(filenames, img_size=img_size)\n",
+    "dataset = SpectrogramDataset(train_files, img_size=img_size)\n",
     "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
-    "print(\"Dataset ready:\", len(dataset), \"images\")"
+    "\n",
+    "train_dataset = SpectrogramDataset(train_files, img_size=img_size)\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "\n",
+    "test_dataset = SpectrogramDataset(test_files, img_size=img_size)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=True)\n",
+    "\n",
+    "full_dataset = SpectrogramDataset(filenames, img_size=img_size)\n",
+    "full_dataloader = DataLoader(full_dataset, batch_size=batch_size, shuffle=True)\n",
+    "\n",
+    "print(\"Train dataset:\", len(train_dataset), \"images\")\n",
+    "print(\"Test dataset:\", len(test_dataset), \"images\")\n",
+    "print(\"Full dataset:\", len(full_dataset), \"images\")"
    ]
   },
   {
@@ -151,10 +193,10 @@
     "        return recon, z\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "model = SimpleAutoencoder(embedding_dim=128).to(device)\n",
+    "ae_model = SimpleAutoencoder(embedding_dim=128).to(device)\n",
     "\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
+    "optimizer = torch.optim.Adam(ae_model.parameters(), lr=1e-3)\n",
     "\n",
     "print(\"Model ready on\", device)"
    ]
@@ -166,13 +208,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 1  # adjust as needed\n",
+    "epochs = 10  # adjust as needed\n",
     "\n",
     "for epoch in range(epochs):\n",
     "    epoch_loss = 0\n",
-    "    for imgs in dataloader:\n",
+    "    for imgs in train_dataloader:\n",
     "        imgs = imgs.to(device)\n",
-    "        recon, z = model(imgs)\n",
+    "        recon, z = ae_model(imgs)\n",
     "        loss = criterion(recon, imgs)\n",
     "\n",
     "        optimizer.zero_grad()\n",
@@ -191,14 +233,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Switch to eval\n",
-    "model.eval()\n",
+    "n_epochs = 10\n",
+    "for epoch in range(n_epochs):\n",
+    "    # --- Training phase ---\n",
+    "    ae_model.train()\n",
+    "    running_loss = 0.0\n",
+    "    for imgs in tqdm(train_dataloader, desc=f\"Train Epoch {epoch+1}/{n_epochs}\"):\n",
+    "        imgs = imgs.to(device)\n",
+    "        recon, _ = ae_model(imgs)  # your model returns (recon, z)\n",
+    "        loss = criterion(recon, imgs)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        running_loss += loss.item() * imgs.size(0)\n",
+    "\n",
+    "    train_loss = running_loss / len(train_dataloader.dataset)\n",
+    "\n",
+    "    # --- Evaluation phase ---\n",
+    "    ae_model.eval()\n",
+    "    test_loss = 0.0\n",
+    "    with torch.no_grad():\n",
+    "        for imgs in tqdm(test_dataloader, desc=f\"Test Epoch {epoch+1}/{n_epochs}\"):\n",
+    "            imgs = imgs.to(device)\n",
+    "            recon, _ = ae_model(imgs)\n",
+    "            loss = criterion(recon, imgs)\n",
+    "            test_loss += loss.item() * imgs.size(0)\n",
+    "\n",
+    "    test_loss = test_loss / len(test_dataloader.dataset)\n",
+    "\n",
+    "    # --- Logging ---\n",
+    "    print(f\"Epoch [{epoch+1}/{n_epochs}] \"\n",
+    "          f\"Train Loss: {train_loss:.6f} | Test Loss: {test_loss:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10",
+   "metadata": {},
+   "source": [
+    "### Save model weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save state dict\n",
+    "save_path = \"../Results/Models/autoencoder.pth\"\n",
+    "os.makedirs(os.path.dirname(save_path), exist_ok=True)\n",
+    "torch.save(ae_model.state_dict(), save_path)\n",
+    "\n",
+    "# Load later\n",
+    "loaded_model = SimpleAutoencoder(embedding_dim=128).to(device)\n",
+    "loaded_model.load_state_dict(torch.load(save_path, map_location=device))\n",
+    "loaded_model.eval()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": [
+    "### Generate Embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "all_embeddings = []\n",
     "\n",
     "with torch.no_grad():\n",
     "    for imgs in DataLoader(dataset, batch_size=batch_size):\n",
     "        imgs = imgs.to(device)\n",
-    "        _, z = model(imgs)\n",
+    "        _, z = loaded_model(imgs)\n",
     "        all_embeddings.append(z.cpu())\n",
     "\n",
     "embeddings_tensor = torch.cat(all_embeddings, dim=0)  # shape (N, embedding_dim)\n",
@@ -214,14 +330,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "15",
    "metadata": {},
    "source": [
     "# Convolutional Autoencoder"
@@ -230,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,14 +450,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "19",
    "metadata": {},
    "source": [
     "# Convolutional Variational Autoencoder"
@@ -350,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,38 +567,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "22",
    "metadata": {},
    "outputs": [],
@@ -500,6 +584,38 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": []
