resumability in embedding pipeline

--- a/Embeddings/check_saved_tensors.ipynb
+++ b/Embeddings/check_saved_tensors.ipynb
@@ -36,6 +36,30 @@
     "    else:\n",
     "        print(f\"{key}: {type(value)}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def checkFileExists(save_path: str) -> bool:\n",
+    "    \"\"\"\n",
+    "    Check if a .pt file exists at the given path and is non-empty.\n",
+    "    \n",
+    "    Args:\n",
+    "        save_path (str): Path to the file.\n",
+    "    \n",
+    "    Returns:\n",
+    "        bool: True if the file exists and has nonzero size, False otherwise.\n",
+    "    \"\"\"\n",
+    "    return os.path.isfile(save_path) and os.path.getsize(save_path) > 0\n",
+    "\n",
+    "checkFileExists(path)\n"
+   ]
   }
  ],
  "metadata": {
