changes to env for UMAP, plotting puts correctness in question

--- a/Clustering/Dim_Reduction_PCA.ipynb
+++ b/Clustering/Dim_Reduction_PCA.ipynb
@@ -14,14 +14,6 @@
    "id": "1",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -33,23 +25,71 @@
     "reduced_dir = Path(\"../Results/EmbeddingDataReduced\")\n",
     "reduced_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "n_components = 50  # change this to however many dims you want\n",
-    "# batch_size = 5000  # known per-batch frame size\n",
+    "n_components = 50  # change as needed\n",
     "\n",
     "# --- COLLECT BATCH FILES ---\n",
     "batch_files = sorted(batched_dir.glob(\"batch_*.pt\"))\n",
     "print(f\"Found {len(batch_files)} batch files\")\n",
     "\n",
-    "# --- INIT INCREMENTAL PCA ---\n",
+    "# ============================================================\n",
+    "# PASS 1: COMPUTE GLOBAL MEAN & STD\n",
+    "# ============================================================\n",
+    "print(\"Computing global mean and std ...\")\n",
+    "n_samples = 0\n",
+    "mean_accum = None\n",
+    "M2_accum = None  # for variance via Welford’s algorithm\n",
+    "\n",
+    "for f in batch_files:\n",
+    "    batch_tensor = torch.load(f, weights_only=True)\n",
+    "    X = batch_tensor.numpy()\n",
+    "    batch_n = X.shape[0]\n",
+    "\n",
+    "    if mean_accum is None:\n",
+    "        mean_accum = X.mean(axis=0)\n",
+    "        M2_accum = X.var(axis=0) * batch_n\n",
+    "        n_samples = batch_n\n",
+    "    else:\n",
+    "        new_mean = X.mean(axis=0)\n",
+    "        new_var = X.var(axis=0)\n",
+    "        new_n = batch_n\n",
+    "\n",
+    "        delta = new_mean - mean_accum\n",
+    "        tot_n = n_samples + new_n\n",
+    "\n",
+    "        # update mean\n",
+    "        mean_accum += delta * new_n / tot_n\n",
+    "\n",
+    "        # update variance sum (Welford parallel variance)\n",
+    "        M2_accum += new_var * new_n + (delta**2) * (n_samples * new_n / tot_n)\n",
+    "\n",
+    "        # update count\n",
+    "        n_samples = tot_n\n",
+    "\n",
+    "global_mean = mean_accum\n",
+    "global_std = np.sqrt(M2_accum / n_samples)\n",
+    "print(\"Global mean/std computed.\")\n",
+    "\n",
+    "# Save normalization stats\n",
+    "np.savez(\n",
+    "    reduced_dir / \"normalization_stats.npz\",\n",
+    "    mean=global_mean,\n",
+    "    std=global_std,\n",
+    ")\n",
+    "print(\"Saved normalization stats.\")\n",
+    "\n",
+    "# ============================================================\n",
+    "# PASS 2: FIT PCA ON NORMALIZED DATA\n",
+    "# ============================================================\n",
     "ipca = IncrementalPCA(n_components=n_components)\n",
     "\n",
-    "# --- PARTIAL FIT ON ALL BATCHES ---\n",
     "for f in batch_files:\n",
-    "    print(f\"Fitting on {f.name} ...\")\n",
+    "    print(f\"Fitting PCA on {f.name} ...\")\n",
     "    batch_tensor = torch.load(f, weights_only=True)\n",
-    "    ipca.partial_fit(batch_tensor.numpy())\n",
+    "    X = batch_tensor.numpy()\n",
+    "    X_norm = (X - global_mean) / (global_std + 1e-8)  # normalize\n",
+    "    ipca.partial_fit(X_norm)\n",
     "\n",
-    "# --- SAVE PCA WEIGHTS ---\n",
+    "# Save PCA weights\n",
     "np.savez(\n",
     "    reduced_dir / \"pca_weights.npz\",\n",
     "    components=ipca.components_,\n",
@@ -62,13 +102,17 @@
     ")\n",
     "print(\"Saved PCA weights.\")\n",
     "\n",
-    "# --- TRANSFORM & SAVE REDUCED BATCHES ---\n",
+    "# ============================================================\n",
+    "# PASS 3: TRANSFORM & SAVE REDUCED BATCHES\n",
+    "# ============================================================\n",
     "for f in batch_files:\n",
     "    print(f\"Transforming {f.name} ...\")\n",
     "    batch_tensor = torch.load(f, weights_only=True)\n",
-    "    reduced = ipca.transform(batch_tensor.numpy())\n",
+    "    X = batch_tensor.numpy()\n",
+    "    X_norm = (X - global_mean) / (global_std + 1e-8)  # normalize\n",
+    "    reduced = ipca.transform(X_norm)\n",
     "    reduced_tensor = torch.from_numpy(reduced).to(torch.float32)\n",
-    "    \n",
+    "\n",
     "    out_file = reduced_dir / f.name\n",
     "    torch.save(reduced_tensor, out_file)\n",
     "    print(f\"Saved reduced batch to {out_file}\")\n"
@@ -77,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
